--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,6 +27,10 @@ jobs:
           pip install poetry
           poetry install
 
+      - name: Check file encodings
+        run: |
+          find . -type f -exec file --mime {} \;
+
       - name: Run tests and collect coverage
         run: |
           poetry run coverage run -m pytest .
